# Python-Package-Template

./: .gitignore  .groovylintrc.json  Jenkinsfile  Jenkinsfile.docs  LICENSE  README.md  README.md.template  hatch.toml  hatch_build.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_report.xml
.github/workflows/: test-and-deliver.yaml
docs/: README.md  changelog.md  development.md  jenkins-cicd.md  release-notes.md  user-guide.md
src/examplepkg/: hello_world.py
tests/: test_hello_world.py
